# christmas_bot_resources

./: README.md  config.json  pyproject.toml
creatures/config/: naughty_elf.json  naughty_gingy.json  naughty_mall_santa.json  naughty_witch.json  nice_gingy.json  nice_presents.json  nice_snow_fairy.json  nice_turtle_dove.json
items/config/: brown_wrapping_paper.json  christmas_wishlist.json  crystal_ball_ornament.json  dash_of_cinammon.json  dash_of_cinnamon.json  discount_coupon.json  disposable_camera.json  drop_of_water.json  essence_of_naughty.json  extra_small_shoes.json  fractal_pattern.json  fresh_worm.json  golden_bow.json  golden_egg.json  gumdrop_button.json  gumdrop_ornament.json  iced_bowtie.json  jingly_bell_ornament.json  letter_to_santa.json  mini_gift_ornament.json  mugwort_tea.json  nasty_hairball.json  paystub.json  pointy_hat.json  popcorn_cranberry_ornament.json  popcorn_garland.json  red_wrapping_paper.json  shiny_ribbon.json  snow_dust.json  snowflake_ornament.json  soft_green_feather.json  striped_tights.json  twine.json
uploader/: config.py  db.py  main.py  s3.py
