[tool.poetry]
name = "christmasbot_resources"
version = "0.1.0"
description = ""
authors = ["Tang Y <kashyap.ganesan@gmail.com>"]
packages = [
    { include = "uploader" },
]

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.8.6"
boto3 = "^1.16.19"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]